# dgi_compliance

./: .gitignore  GUIDE_DEPLOIEMENT_GIT_FRAPPE.md  INSTALL_FRAPPE_CLOUD.md  MANIFEST.in  README.md  REFERENCE_SYNC.md  TOKEN_MONITORING.md  VAT_ROUNDING.md  WHATS_NEW_1.4.md  WHATS_NEW_2.0.md  WHATS_NEW_3.0.1.md  WHATS_NEW_3.0.2.md  WHATS_NEW_3.0.md  WHATS_NEW_3.1.0.md  WHATS_NEW_3.1.1.md  WHATS_NEW_3.2.0.md  WHATS_NEW_3.2.1.md  WHATS_NEW_3.3.0.md  license.txt  pyproject.toml
dgi_compliance/: hooks.py  modules.txt  patches.txt  tasks.py
dgi_compliance/api/: client.py  info.py  invoice.py
dgi_compliance/config/: desktop.py  dgi_compliance.py
dgi_compliance/dgi_compliance/report/: dgi_report_utils.py
dgi_compliance/edef/: audit.py  client.py  mapper.py  matrix.py  printutils.py  qr.py  rounding.py  seed.py  sync.py  tasks.py  util.py
dgi_compliance/fixtures/: custom_field.json
dgi_compliance/overrides/: sales_invoice.py
dgi_compliance/patches/v1_0/: add_custom_fields.py  backfill_dgi_status.py  create_default_settings.py  seed_reference_data.py
dgi_compliance/patches/v1_1/: widen_token_and_pos_fields.py
dgi_compliance/patches/v1_2/: seed_static_catalogs.py
dgi_compliance/patches/v2_0/: seed_mapping_and_matrix.py
dgi_compliance/patches/v3_0/: cleanup_legacy_fields.py
dgi_compliance/patches/v3_1/: fix_invalid_link_fields.py  set_default_print_format.py
dgi_compliance/patches/v3_2/: seed_currency_rules.py
dgi_compliance/tests/: test_api_client.py  test_invoice_mapping.py
dgi_compliance/utils/: json_builder.py  mapping.py  qr.py
(+66 files in other folders)
