[project]
name = "dgi_compliance"
version = "3.1.1"
description = "DGI RDC e-MCF/e-DEF fiscal compliance for ERPNext v16 (upgrade-safe custom app)"
authors = [{ name = "DGI Compliance" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["requests>=2.28", "qrcode[pil]>=7.4"]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "dgi_compliance"
